# concentrate

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  any.py  app.js  compile_commands.json  compose.yml  focus.db  focus_timeline.db  id.html  index.html  input.css  niriserver.py  niriuse.cpp
.github/workflows/: c-cpp.yml
browser-extension/chrome/: background.js  manifest.json
browser-extension/chrome/static/: popup.js
browser-extension/mozilla/: background.js  manifest.json
browser-extension/mozilla/static/: popup.html  popup.js
lua/focusservice/: init.lua
modules/: history.js
resources/: Concentrate.desktop  add-entries.py  concentrate.desktop  convert-database-to-xml.py  get_entries.py  pythondbus.py  testing.py  tray  tray.cpp
src/: Concentrate.cpp  Concentrate.hpp  anytype.cpp  anytype.hpp  anytype_api.cpp  anytype_api.h  common.cpp  common.h  common.hpp  concentrate.cpp  concentrate.hpp  focus_rules.h  focusservice.cpp  focusservice.hpp  http_server.cpp  http_server.h  hydration.cpp  hydration.hpp  hyprland.cpp  hyprland.hpp  json.cpp  json.hpp  main.cpp  niri.cpp  niri.hpp  notification.cpp  notification.hpp  secret_store.cpp  secret_store.h  secrets.cpp  secrets.hpp  server.cpp  server.hpp  sqlite.cpp  sqlite.hpp  sqlite_store.cpp  sqlite_store.h  tray.cpp  tray.hpp  window.cpp  (+3 more)
webui/: index.html  main.js
webui/api/: client.js
webui/core/: stateManager.js
webui/modules/: anytype.js  history.js  pomodoro.js
webui/utils/: helpers.js
webui/views/: taskView.js
